--- a/frontend/src/pages/Admin/AdminDashboardPage.css
+++ b/frontend/src/pages/Admin/AdminDashboardPage.css
@@ -16,7 +16,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../assets/images/nailong.png');
+  background-image: url('../../assets/images/nailong.png');
   background-size: cover;
   background-position: center;
   filter: blur(8px);
